--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
       position: relative;
       z-index: 2;
     }
-
     .card.open {
       transform: rotateY(180deg);
     }
-
     .card-content {
       display: flex;
       justify-content: center;
@@ -106,7 +104,6 @@
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
       transition: background 0.3s ease, transform 0.2s ease;
     }
-
     button:hover {
       background: #3498db;
       transform: scale(1.1);
@@ -137,7 +134,7 @@
 
 <!-- Birthday Cake -->
 <div class="cake-container" id="cakeContainer">
-  <img src="https://images.rawpixel.com/image_png_300/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8yMl9iaXJ0aGRheV9jYWtlX2N1dGVfM2RfaXNvbGF0ZWRfb25fd2hpdGVfYmFja19lN2Y5ZWJiYi1kMTE4LTQzZDQtOGQ2Ni02ZDk4YjQyODM5MzkucG5n.png" alt="Birthday Cake">
+  <img src="https://images.rawpixel.com/image_png_300/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8yMl9iaXJ0aGRheV9jYWtlX2N1dGVfM2RfaXNvbGF0ZWRfb25fd2hpdGVfYmFja19lN2Y5ZWJiYi1kMTE4LTQzZDQtOGQ2Ni02ZDk4YjQyODM5MzkucG5n.png">
   <p>🎂 Blow the candles to reveal the surprise! 🎂</p>
   <button onclick="revealMessage()">Blow Candles</button>
 </div>
@@ -190,4 +187,4 @@
 </script>
 
 </body>
-</html>
+</html> 
